crates/crb-webui-shared/src/snapshots/crb_webui_shared__tests__fnv1a_hash_determinism.snap
---
source: crates/crb-webui-shared/src/lib.rs
expression: "(fnv1a_hash(\"hello\"), fnv1a_hash(\"hello\"), fnv1a_hash(\"world\"))"
---
(
    1335831723,
    1335831723,
    933488787,
)
