crates/crb-webui-shared/src/snapshots/crb_webui_shared__tests__role_color_consistency_across_calls-3.snap
---
source: crates/crb-webui-shared/src/lib.rs
expression: "(role, c1, c2)"
---
(
    "SEC",
    "#017192",
    "#017192",
)
