crates/crb-webui-shared/src/snapshots/crb_webui_shared__tests__role_color_determinism.snap
---
source: crates/crb-webui-shared/src/lib.rs
expression: "(color1, color2)"
---
(
    "#D37234",
    "#D37234",
)
